# diploma_project

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  report.txt
config/: settings.py  urls.py
content/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
content/migrations/: 0001_initial.py  0002_initial.py
content/templates/content/: base.html  content_confirm_delete.html  content_detail.html  content_form.html  content_list.html  main.html  reader_list.html
content/templates/content/includes/: footer.html  menu.html
content/templatetags/: mymedia.py
fixtures/: all_data.json  content.json  user.json
users/: admin.py  forms.py  models.py  servicies.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  payment_cancel.html  payment_create.html  payment_success.html  phone_verify.html  user_form.html  user_register_form.html
